--- a/roles/install_cli_tools/tasks/main.yml
+++ b/roles/install_cli_tools/tasks/main.yml
@@ -1,22 +1,47 @@
 ---
 - name: "Installing package {{ item }}"
   package:
-    name: "{ item }}"
+    name: "{{ item }}"
     state: latest
   with_items:
     - git
-    - git-extras
-    - tig
-    - ack-grep
-    - silversearcher-ag
+    - git-extras # A pack of handful additional commands for git
+    - tig # NCurses-based text-mode interface for git
+    - ack-grep # better searching tool than grep
+    - silversearcher-ag # A code searching tool similar to ack, with a focus on speed
     - tmux
-    - cloc
+    - cloc # Tool to count lines of code
     - autojump
-    - htop
-    - ranger
+    - htop # An interactive process viewer for Unix, better than top
+    - ranger # Console file manager with Vi key bindings
     - zsh
-    - rmtrash
-    - neovim
-    - rcm
-    - 
+    - neovim # Vim with async plugins execution
+    - rcm # Dotfiles management tool from Thoughtbot
+    - direnv # Tool for autoloading environment variables when cd'ing into a folder
+    - jq # Command-line JSON parser
+    - tree # Tool able to show directory tree structure in the shell
+    - ssh-copy-id
+    - mosh # More robust and responsive replacement for SSH
+    - wget
+    - gnupg2
+    - nodejs
+    - ruby
+    - rust
+    - groovy
+    - python@2
+    - openjdk-8-jdk
+    - cmake
+    - ant
+    - maven
+    - gradle
+- name: Installing zplug
+  shell: curl -sL --proto-redir -all,https https://raw.githubusercontent.com/zplug/installer/master/installer.zsh | zsh
+- name: Installing fd
+  shell: |
+    curl -sL --proto-redit -all,https https://github.com/sharkdp/fd/releases/download/v7.0.0/fd_7.0.0_amd64.deb > fd.deb && sudo dpkg -i fd.deb
+    rm -f fd.deb
+- name: Installing fzf
+  shell: |
+    git clone --depth 1 https://github.com/junegunn/fzf.git ~/.fzf && ~/.fzf/install
+    rm -rf ~/.fzf
 ...
