Added creates for zplug install task.

--- a/roles/install_cli_tools/tasks/main.yml
+++ b/roles/install_cli_tools/tasks/main.yml
@@ -36,6 +36,8 @@
     - gradle
 - name: Installing zplug
   shell: curl -sL --proto-redir -all,https https://raw.githubusercontent.com/zplug/installer/master/installer.zsh | zsh
+  args:
+    creates: ~/.zplug
 - name: Installing fd
   shell: |
     curl -sL --proto-redit -all,https https://github.com/sharkdp/fd/releases/download/v7.0.0/fd_7.0.0_amd64.deb > fd.deb && sudo dpkg -i fd.deb
