--- a/roles/setup-vim/tasks/main.yml
+++ b/roles/setup-vim/tasks/main.yml
@@ -1,28 +1,12 @@
 ---
 - name: "Installing development library {{ item }}"
   package:
-    name: {{ item }}
+    name: "{{ item }}"
     state: latest
-  with_items:
-    - libncurses-dev
-    - libgnome2-dev
-    - libgtk2.0-dev
-    - libatk1.0-dev
-    - libbonoboui2-dev
-    - libcairo2-dev
-    - libx11-dev
-    - libxpm-dev
-    - libxt-dev
-    - libgnomeui-dev
-    - python-dev
-    - python3-dev
-    - ruby-dev
-    - lua5.1
-    - liblua5.1-dev
-    - libperl-dev
+  with_items: "{{ required_tools }}"
 - name: Cloning vim repository
   git:
-    repo: https://github.com/vim/vim.git
+    repo: "{{ vim_repo }}"
     dest: ~/vim
     depth: 1
     version: v8.1.0105
