Nodejs is back because of tsuquyomi plugin for vim.

--- a/roles/install-cli-tools/defaults/main.yml
+++ b/roles/install-cli-tools/defaults/main.yml
@@ -22,6 +22,7 @@ packages:
   - wget
   - rename # cli tool for renaming multiple files
   - gnupg2
+  - nodejs # tsuquyomi vim plugin doesn't recognize nvm
   - ruby
   - rust
   - groovy
