Fixes & some additions.

--- a/oh-my-linux.yml
+++ b/oh-my-linux.yml
@@ -3,10 +3,10 @@
   connection: local
   roles:
     - install-cli-tools
-    - setup-dotfiles
-    - setup-vim
-    - install-nodes
-    - install-gems
+    # - setup-dotfiles
+    # - setup-vim
+    # - install-nodes
+    # - install-gems
     - install-snaps
-    - install-crates
+    # - install-crates
 ...
