--- a/roles/install-cli-tools/defaults/main.yml
+++ b/roles/install-cli-tools/defaults/main.yml
@@ -9,7 +9,7 @@ packages:
   - git-extras # A pack of handful additional commands for git
   - tig # NCurses-based text-mode interface for git
   - ack-grep # better searching tool (ack) than grep
-  - silversearcher-ag # A code searching tool similar to ack, with a focus on speed
+  - silversearcher-ag # A code searching tool similar to ack
   - cloc # Tool to count lines of code
   - autojump # faster way to navigate the filesystem with command 'j'
   - htop # An interactive process viewer for Unix, better than top
@@ -17,7 +17,7 @@ packages:
   - ranger # Console file manager with Vi key bindings
   - neovim # Vim with async plugins execution
   - rcm # Dotfiles management tool from Thoughtbot
-  - direnv # Tool for autoloading environment variables when cd'ing into a folder
+  - direnv # Tool for autoloading env variables when cd'ing into a folder
   - jq # Command-line JSON parser
   - yq # Command-line YAML parser
   - openssh-client # includes ssh-copy-id tool
@@ -38,8 +38,8 @@ packages:
   - python3
   - make
   - cmake
-  - g++ 
-  - checkinstall # keeps track of everything installed by make install and similar
+  - g++
+  - checkinstall # keeps track of everything installed by make install
   - ant
   - maven
   - gradle
